force-app/main/default/objects/Market_Area_Alerts_Settings__c/Market_Area_Alerts_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of various MAA project settings to control &quot;switches&quot; based on business feedback</description>
    <label>Market Area Alerts Settings</label>
</CustomObject>