force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Allow_Filtering_by_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Allow_Filtering_by_Equipment_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows filtering of the returned result by equipment type and equipment size</description>
    <label>Allow Filtering by Equipment</label>
    <type>Checkbox</type>
</CustomField>