force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Allow_Filtering_by_LOB__c.field-meta.xml
<CustomField>
    <fullName>Allow_Filtering_by_LOB__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the system to reduce the returned transaction count by LOB parameters</description>
    <label>Allow Filtering by LOB</label>
    <type>Checkbox</type>
</CustomField>