force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Allow_Filtering_by_Material__c.field-meta.xml
<CustomField>
    <fullName>Allow_Filtering_by_Material__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Filtering by Material</label>
    <type>Checkbox</type>
</CustomField>