force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Number_of_Alerts_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Alerts_Per_Page__c</fullName>
    <label>Number of Alerts Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>