force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Number_of_Days_of_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_of_Alerts__c</fullName>
    <defaultValue>14</defaultValue>
    <label>Number of Days of Expired Alerts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>