force-app/main/default/objects/Market_Area_Alerts_Settings__c/fields/Records_Shown__c.field-meta.xml
<CustomField>
    <fullName>Records_Shown__c</fullName>
    <description>Given a type of record (case, for example) declaratively control the page size from a custom setting rather than hard coded input.</description>
    <label>Records Shown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>