force-app/main/default/objects/Market_Area_Alerts_Settings__c/listViews/Custom_Setting_Fields.listView-meta.xml
<ListView>
    <fullName>Custom_Setting_Fields</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Days_of_Alerts__c</columns>
    <columns>Allow_Filtering_by_Equipment_Type__c</columns>
    <columns>Allow_Filtering_by_LOB__c</columns>
    <columns>Allow_Filtering_by_Material__c</columns>
    <columns>Records_Shown__c</columns>
    <filterScope>Everything</filterScope>
    <label>Custom Setting Fields</label>
</ListView>